--- a/dev/haml/partials/_html_header.haml
+++ b/dev/haml/partials/_html_header.haml
@@ -33,10 +33,10 @@
 
 		%ul.social_links
 			%li.social_twitter
-				%a.wrap_svg{:href => "#", :title => "Follow us on Twitter"}
+				%a.wrap_svg{:href => "https://twitter.com/northandnavy", :title => "Follow us on Twitter", :target => "_blank"}
 					%svg.svg_ui-twitter{:viewBox => "0 0 64 46"}
 						%use{"xlink:href" => "#ui_twitter"}
 			%li.social_instagram
-				%a.wrap_svg{:href => "#", :title => "Follow us on Instagram"}
+				%a.wrap_svg{:href => "http://instagram.com/northandnavy", :title => "See us on Instagram", :target => "_blank"}
 					%svg.svg_ui-instagram{:viewBox => "0 0 64 64"}
 						%use{"xlink:href" => "#ui_instagram"}
