--- a/dev/haml/partials/_sec_bacaro.haml
+++ b/dev/haml/partials/_sec_bacaro.haml
@@ -1,11 +1,11 @@
 %section#bacaro.bacaro
 
-	%article.message{"data-container" => "width_848"}
+	%article.message{"data-container" => "width_680"}
 
 		%img{:src => "assets/img/ill_glass.png", :alt => ""}
 
 		.wrap_content
 			%h5 Bacaro
-			%p On practically every calle, salizada and ruga in Venice, you’ll find a Bacaro - a casual place to grab a glass of wine or Prosecco and a bite to eat, known as &ldquo;cicheti.&rdquo;
-			%p Bacari are Italy’s answer to the pub, and cicheti are the Italian answer to Spanish tapas. Italians have an answer for everything.
+			%p On practically every calle, salizada and ruga in Venice, you&rsquo;ll find a Bacaro &ndash; a casual place to grab a glass of wine or Prosecco and a bite to eat, known as &ldquo;cich&egrave;ti.&rdquo;
+			%p Bacari are Italy’s answer to the pub, and cich&egrave;ti are the Italian answer to Spanish tapas. Italians have an answer for everything.
 			%p Situated at the rear of the restaurant, our Bacaro upholds the Italian tradition of togetherness. It’s the perfect place to meet friends after work, or to share a casual glass of sparkling wine and a small bite to eat.
