--- a/dev/haml/partials/_sec_gift.haml
+++ b/dev/haml/partials/_sec_gift.haml
@@ -8,6 +8,7 @@
 				%use{"xlink:href" => "#ui_heart"}
 
 			%h5 Gift Certificates
-			%p North and Navy gift certificates can be used to pay all or part of a bill, and never expire. Sending a gift certificate is simple; just fill out our Gift Certificate form and it will arrive in the recipient’s inbox right away. If you prefer the physical kind, stop in anytime and we’d be happy to prepare one for you.
+			:plain
+				<p>North and Navy gift certificates can be used to pay all or part of a bill, and never expire. Give us a call at <a href="tel:+1-613-232-6289" title="Call us">(613) 232-6289</a>, and we can either email or mail a gift certificate to the recipient of your choice. If you prefer the physical kind, stop in anytime and we’d be happy to prepare one for you.</p>
 
-			%a.button{:href => "#", :title => "Give a Gift"} Give a Gift
+			-# %a.button{:href => "#", :title => "Give a Gift"} Give a Gift
