--- a/dev/haml/partials/_sec_foodwine.haml
+++ b/dev/haml/partials/_sec_foodwine.haml
@@ -1,6 +1,6 @@
 %section#foodwine.foodwine
 
-	%article.intro{"data-container" => "width_848"}
+	%article.intro{"data-container" => "width_660"}
 
 		.wrap_heading
 
@@ -17,9 +17,9 @@
 			%img{:src => "assets/img/ill_fish.png", :alt => ""}
 
 		.wrap_content
-			%p Our menu is inspired by tradition and dictated by the quality and availability of ingredients. We play off the similarities between the climates of eastern Ontario and northwest Italy, and create our take on classic dishes made with seasonal game, seafood and vegetables. Plus, sometimes we’ll just add whatever we want.
+			%p Our menu is inspired by tradition and dictated by the quality and availability of ingredients. We play off the similarities between the climates of eastern Ontario and Northeast Italy, and create our take on classic dishes made with seasonal game, seafood and vegetables. Plus, sometimes we’ll just add whatever we want.
 
-	%article.lunchdinner{"data-container" => "width_848"}
+	%article.lunchdinner{"data-container" => "width_660"}
 
 		-# Detect what time it is and toggle Dinner if after a certain time?
 
@@ -38,101 +38,83 @@
 
 			#menu_lunch.menu_list.toggled
 
-				%h5 Cicheti
+				%h5 Main
 				%ul
 					%li
-						%span.menu_item Baccala Cappucina (whipped salt cod with parsley & capers)
-						%span.menu_price 15
+						%span.menu_item Minestrone Soup
+						%span.menu_price 7
 					%li
-						%span.menu_item Battered and Fried Olives and Mozzarella
-						%span.menu_price 14
-					%li
-						%span.menu_item Anchovy and White Bean
-						%span.menu_price 12
-					%li
-						%span.menu_item Lardo Wrapped Figs and Blue Cheese
-						%span.menu_price 11
-					%li
-						%span.menu_item Smoked Ricotta and Fennel
-						%span.menu_price 14
-					%li
-						%span.menu_item Bresola Lettuce Wraps
-						%span.menu_price 13
-					%li
-						%span.menu_item Cicheti Plate (one of each)
-						%span.menu_price 28
-
-				%h5 Primi
-				%ul
-					%li
-						%span.menu_item Bigoli in Salsa
-						%span.menu_price 15
-					%li
-						%span.menu_item Pumpkin and Amaretti Cookie Filled Ravioli
-						%span.menu_price 17
-					%li
-						%span.menu_item Rise e Bisi (risotto and peas)
-						%span.menu_price 14
-					%li
-						%span.menu_item Farfalle with Pancetta and Mushrooms
-						%span.menu_price 16
-
-				%h5 Antipasta
-				%ul
-					%li
-						%span.menu_item Citrus Salad
-						%span.menu_price 13
-					%li
-						%span.menu_item Raw Mushroom Carpaccio
-						%span.menu_price 12
+						%span.menu_item Peperonata with Poached Egg
+						%span.menu_price 8
 					%li
 						%span.menu_item Endive Caesar Salad
-						%span.menu_price 13
+						%span.menu_price 9
 					%li
-						%span.menu_item Polpette
-						%span.menu_price 14
+						%span.menu_item Citrus Salad
+						%span.menu_price 10
 					%li
-						%span.menu_item Scotto Deo Clams
-						%span.menu_price 14
-
-				%h5 Secondi
-				%ul
+						%span.menu_item Bigoli in salsa
+						%span.menu_price 8
 					%li
-						%span.menu_item Warm Octopus and Potatoes
-						%span.menu_price 20
+						%span.menu_item Corzetti with Walnuts and Pancetta
+						%span.menu_price 9
 					%li
-						%span.menu_item Venetian Liver & Onions
-						%span.menu_price 21
-					%li
-						%span.menu_item Flatiron with Peperonata Fried Salami and Sunnyside Egg
-						%span.menu_price 23
-					%li
-						%span.menu_item Quail in Polenta
-						%span.menu_price 24
-					%li
-						%span.menu_item Mackerel in Saor
+						%span.menu_item Mackerel in sa&oacute;r
 						%span.menu_price 22
 					%li
-						%span.menu_item Bisteka Fiorintine
-						%span.menu_price 25
-
-				%h5 Dolce
-				%ul
+						%span.menu_item Warm Octopus and Potato Salad
+						%span.menu_price 22
 					%li
-						%span.menu_item Baicoli & Coffee
-						%span.menu_price 11
-					%li
-						%span.menu_item Tiramisu
+						%span.menu_item Mortadella bianca
 						%span.menu_price 12
 					%li
-						%span.menu_item Olive Oil Cake with Black Pepper Ice Cream
-						%span.menu_price 13
+						%span.menu_item Venetian Liver and Onions
+						%span.menu_price 18
+
+				%h5 Sweet
+				%ul
+					%li
+						%span.menu_item Baicoli and Coffee
+						%span.menu_price 6
+					%li
+						%span.menu_item Tiramisu
+						%span.menu_price 8
+					%li
+						%span.menu_item Cacio e pepe Twinkie
+						%span.menu_price 9
+
+				%h5 To Drink
+				%ul
+					%li
+						%span.menu_item Alois Lageder, Pinot Grigio 2013
+						%span.menu_price 4
+					%li
+						%span.menu_item Negrar, Valpolicella Ripasso 2012
+						%span.menu_price 4
+					%li
+						%span.menu_item Hinterland Whitecap 2013
+						%span.menu_price 4
+
+				%h5 Beer
+				%ul
+					%li
+						%span.menu_item Mini Beau&rsquo;s
+						%span.menu_price 3
+					%li
+						%span.menu_item Peroni
+						%span.menu_price 3
+
+
+
+
+
+
 
 		.wrap_svg.divider
 			%svg.svg_ui-close
 				%use{"xlink:href" => "#ui_close"}
 
-	%article.wine{"data-container" => "width_848"}
+	%article.wine{"data-container" => "width_660"}
 
 		.wrap_heading
 
@@ -153,88 +135,58 @@
 				%p In vino veritas.
 				%cite –Piny the Elder
 
-		%a.tag_circle.wine_full{:href => "#", :title => "View Full Wine List"}
-			%span.tag_text View Full Wine List
+		-# %a.tag_circle.wine_full{:href => "#", :title => "View Full Wine List"}
+			-# %span.tag_text View Full Wine List
+
+		%p.wines We carry too many wines to list them all here, but here are a few of our favourites.
 
 		#menu_wine.menu_list
 
-			%h5 Prosecco
+			%h5 Sparkling
 			%ul
 				%li
-					%span.menu_item Baccala Cappucina (whipped salt cod with parsley & capers)
-					%span.menu_price 15
+					%span.menu_item Majolini, Franciacorta, Italy, N/V (non Vintage)
+					%span.menu_price 8/90
 				%li
-					%span.menu_item Battered and Fried Olives and Mozzarella
-					%span.menu_price 14
+					%span.menu_item Hinterland Whitecap, PEC, Canada, 2013
+					%span.menu_price 10/50
 				%li
-					%span.menu_item Anchovy and White Bean
-					%span.menu_price 12
-				%li
-					%span.menu_item Lardo Wrapped Figs and Blue Cheese
-					%span.menu_price 11
-				%li
-					%span.menu_item Smoked Ricotta and Fennel
-					%span.menu_price 14
-				%li
-					%span.menu_item Bresola Lettuce Wraps
-					%span.menu_price 13
-				%li
-					%span.menu_item Cicheti Plate (one of each)
-					%span.menu_price 28
+					%span.menu_item Lanson, Brut Black Label, Champagne France,
+					%span.menu_price 135
 
-			%h5 Spumante
+			%h5 White
 			%ul
 				%li
-					%span.menu_item Citrus Salad
-					%span.menu_price 13
+					%span.menu_item Arnaldo Caprai, Grechetto, Umbria, Italy 2013
+					%span.menu_price 7/34
 				%li
-					%span.menu_item Raw Mushroom Carpaccio
-					%span.menu_price 12
+					%span.menu_item Calumus, Riesling, Niagara, Canada 2013
+					%span.menu_price 8/40
 				%li
-					%span.menu_item Endive Caesar Salad
-					%span.menu_price 13
+					%span.menu_item Alois Lageder, Pinot Grigio, Alto Adige Italy 2013
+					%span.menu_price 9/45
 				%li
-					%span.menu_item Polpette
-					%span.menu_price 14
-				%li
-					%span.menu_item Scotto Deo Clams
-					%span.menu_price 14
+					%span.menu_item Daviss Bynum, Riverwest Chardonnay, California, USA
+					%span.menu_price 13/75
 
-			%h5 Bianco
+			%h5 Red
 			%ul
 				%li
-					%span.menu_item Warm Octopus and Potatoes
-					%span.menu_price 20
+					%span.menu_item Negrar, Ripasso di Valpolicella, Veneto, Italy
+					%span.menu_price 8/40
 				%li
-					%span.menu_item Venetian Liver & Onions
-					%span.menu_price 21
+					%span.menu_item Mission Hill, Reserve Merlot, Okanagan, Canada
+					%span.menu_price 11/55
 				%li
-					%span.menu_item Flatiron with Peperonata Fried Salami and Sunnyside Egg
-					%span.menu_price 23
+					%span.menu_item Pio Cesare, Barbera D'Alba, Piedmonte, Italy
+					%span.menu_price 12/58
 				%li
-					%span.menu_item Quail in Polenta
-					%span.menu_price 24
+					%span.menu_item Tenuta Del Ornellaia, La Volte, Tuscant, Italy
+					%span.menu_price 13/75
 				%li
-					%span.menu_item Mackerel in Saor
-					%span.menu_price 22
-				%li
-					%span.menu_item Bisteka Fiorintine
-					%span.menu_price 25
-
-			%h5 Rosso
-			%ul
-				%li
-					%span.menu_item Baicoli & Coffee
-					%span.menu_price 11
-				%li
-					%span.menu_item Tiramisu
-					%span.menu_price 12
-				%li
-					%span.menu_item Olive Oil Cake with Black Pepper Ice Cream
-					%span.menu_price 13
+					%span.menu_item Travligni, Nebiolo, Gatinara, Italy
+					%span.menu_price 14/80
 
 		.wrap_svg.divider
 			%svg.svg_ui-close
 				%use{"xlink:href" => "#ui_close"}
-
-
