--- a/dev/haml/partials/_sec_private.haml
+++ b/dev/haml/partials/_sec_private.haml
@@ -4,11 +4,11 @@
 		%img.octo-top{:src => "assets/img/ill_octo-top.png", :alt => ""}
 		%span.divider_double
 
-	%article.dining{"data-container" => "width_848"}
+	%article.dining{"data-container" => "width_720"}
 
 		.wrap_content
 			%h5 Private Dining
-			%p Our private dining room is ideal for meetings, presentation or parties. The room can accommodate up to 25 guests for dinner, or up to 45 for cocktails and cicheti. No matter what the occasion, we promise to deliver and unforgettable experience for you and your guests.
+			%p Our private dining room is ideal for meetings, presentation or parties. The room can accommodate up to 25 guests for dinner, or up to 45 for cocktails and cich&egrave;ti. No matter what the occasion, we promise to deliver and unforgettable experience for you and your guests.
 			%p The space is equipped with modern audio visual equipment and complimentary WiFi, and features a dedicated server for your event.
 			%ul.list_rates
 				%li Lunch $36 per guest
