--- a/dev/haml/partials/_sec_reserve.haml
+++ b/dev/haml/partials/_sec_reserve.haml
@@ -1,11 +1,11 @@
 %section#reserve.reserve
 
-	%article.reservations{"data-container" => "width_848"}
+	%article.reservations{"data-container" => "width_768"}
 
 		.wrap_content
 			%h5 Reserve
 			:plain
-				<p>To reserve a table, book online or give us a call at <a href="tel:+1-613-232-6289" title="Call us">(613) 232-6289</a>. You can also stop by our Bacaro anytime and enjoy a snack and a drink. No reservations necessary. For large groups, we also offer a private dining room that’s perfect for parties or meetings.</p>
+				<p>To reserve a table, <a href="#" title="Make a reservation">book online</a> or give us a call at <a href="tel:+1-613-232-6289" title="Call us">(613) 232-6289</a>. You can also stop by our Bacaro anytime and enjoy a snack and a drink. No reservations necessary. For large groups, we also offer a private dining room that’s perfect for parties or meetings.</p>
 				<p>North & Navy is located at 226 Nepean Street in downtown Ottawa. <a href="#" title="Get Directions">Get directions.</a></p>
 
 		%a.button{:href => "#", :title => "Reserve a Table"} Reserve a Table
