--- a/dev/styles/_base.scss
+++ b/dev/styles/_base.scss
@@ -24,7 +24,7 @@ a:active, a:hover { outline: 0; }
 
 // Typography
 // ----------------------------------------------------------------------------
-h1, h2, h3, h4, h5, h6, p, ul, ol, li { margin: 0; padding: 0; font-weight: 400; font-style: normal; line-height: 1; }
+h1, h2, h3, h4, h5, h6, p, ul, ol, li { margin: 0; padding: 0; font-weight: 700; font-style: normal; line-height: 1; } // CHANGED FONT-WEIGHT FOR ARCHER
 strong { font-weight: bold; }
 small { font-size: 80%; }
 sub, sup { font-size: 75%; line-height: 0; position: relative; vertical-align: baseline; }
