addressed internal feedback

--- a/dev/haml/partials/_html_header.haml
+++ b/dev/haml/partials/_html_header.haml
@@ -5,15 +5,15 @@
 		%nav
 			%ul
 				%li
-					%a{:href => "#reserve", :title => "Reserve"} Reserve
+					%a{:href => "#reserve", :title => "Reserve", "data-scroll" => true} Reserve
 				%li
-					%a{:href => "#foodwine", :title => "Food and Wine"} Food &amp; Wine
+					%a{:href => "#foodwine", :title => "Food and Wine", "data-scroll" => true} Food &amp; Wine
 				%li
-					%a{:href => "#bacaro", :title => "Bacaro"} Bacaro
+					%a{:href => "#bacaro", :title => "Bacaro", "data-scroll" => true} Bacaro
 				%li
-					%a{:href => "#private", :title => "Private Dining"} Private Dining
+					%a{:href => "#private", :title => "Private Dining", "data-scroll" => true} Private Dining
 				%li
-					%a{:href => "#photos", :title => "Photos"} Photos
+					%a{:href => "#photos", :title => "Photos", "data-scroll" => true} Photos
 				%li
 					%a#email_header{:href => "#", :title => "Get in Touch"} Get in Touch
 
