--- a/dev/haml/partials/_sec_private.haml
+++ b/dev/haml/partials/_sec_private.haml
@@ -16,7 +16,7 @@
 				%li Family-style Dinner: $55 per guest
 				%li Table d’hote from that evening’s menu: $69 per guest
 
-			%a.button{:href => "#", :title => "Sample Menu"} Sample Menu
+			%a.button{:href => "assets/files/private_dining.pdf", :title => "Sample Menu", :target => "_blank"} Sample Menu
 
 			:plain
 				<p>For more details, give us a call at <a href="tel:+1-613-232-6289" title="Call us">(613) 232-6289</a> and we’d be happy to help create your ideal event.</p>
